examples/bad/ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION/not_a_f_fix_reconstruct.st
language core;

extend with #type-reconstruction, #fixpoint-combinator;

fn main(n : Nat) -> Nat {
  return fix(true);
}
//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
